--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/V5.loader.js";
+      var loaderUrl = buildUrl + "/v6p.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/V5.data",
-        frameworkUrl: buildUrl + "/V5.framework.js",
-        codeUrl: buildUrl + "/V5.wasm",
+        dataUrl: buildUrl + "/v6p.data",
+        frameworkUrl: buildUrl + "/v6p.framework.js",
+        codeUrl: buildUrl + "/v6p.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WEB_CARROS",
