--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/v6p.loader.js";
+      var loaderUrl = buildUrl + "/V7p.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/v6p.data",
-        frameworkUrl: buildUrl + "/v6p.framework.js",
-        codeUrl: buildUrl + "/v6p.wasm",
+        dataUrl: buildUrl + "/V7p.data.br",
+        frameworkUrl: buildUrl + "/V7p.framework.js.br",
+        codeUrl: buildUrl + "/V7p.wasm.br",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WEB_CARROS",
