--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/V7p.loader.js";
+      var loaderUrl = buildUrl + "/v19.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/V7p.data.br",
-        frameworkUrl: buildUrl + "/V7p.framework.js.br",
-        codeUrl: buildUrl + "/V7p.wasm.br",
+        dataUrl: buildUrl + "/v19.data",
+        frameworkUrl: buildUrl + "/v19.framework.js",
+        codeUrl: buildUrl + "/v19.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WEB_CARROS",
@@ -81,7 +81,7 @@
       // JS_FileSystem_Sync() behavior, but in future Unity version, this will be
       // expected to change.
 
-      if (iPad|iPod|Android/i.test(navigator.userAgent)) {
+      if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
 
         var meta = document.createElement('meta');
