--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/22.loader.js";
+      var loaderUrl = buildUrl + "/v23.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/22.data",
-        frameworkUrl: buildUrl + "/22.framework.js",
-        codeUrl: buildUrl + "/22.wasm",
+        dataUrl: buildUrl + "/v23.data",
+        frameworkUrl: buildUrl + "/v23.framework.js",
+        codeUrl: buildUrl + "/v23.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "WEB_CARROS",
